Add one more type of the retrofit api calling with {} bracket

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="please_check_network_no_internet_connection_available" translatable="false">Please check your internet connection.</string>
     <string name="phone_no_error" translatable="false">Phone no max length should be 10 digits.</string>
     <string name="please_enter_valid_email_id" translatable="false">Please enter valid email id</string>
+    <string name="please_wait">Please_wait</string>
 </resources>
